src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>ClaimNumber__c</fullName>
        <displayFormat>MC# {00000000}</displayFormat>
        <label>Claim #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Claim_Description__c</fullName>
        <label>Claim Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Name__c</fullName>
        <label>Claim Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_of_Claim__c</fullName>
        <label>Cost of Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Provided__c</fullName>
        <label>Services Provided</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLA-101{000}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>